# DW_aviacao

./: clickhouse.sql
air-carriers-international-market-etl/: .gitignore  README.md
air-carriers-international-market-etl/air-carriers-international-market-etl/: pyproject.toml
air-carriers-international-market-etl/air-carriers-international-market-etl/.viz/: stats.json
air-carriers-international-market-etl/air-carriers-international-market-etl/conf/: logging.yml
air-carriers-international-market-etl/air-carriers-international-market-etl/conf/base/: catalog.yml
air-carriers-international-market-etl/air-carriers-international-market-etl/notebooks/: dumps.ipynb
air-carriers-international-market-etl/air-carriers-international-market-etl/src/air_carriers_international_market_etl/: __init__.py  __main__.py  settings.py
air-carriers-international-market-etl/air-carriers-international-market-etl/src/air_carriers_international_market_etl/pipelines/data_processing/: nodes.py  pipeline.py
air-carriers-international-market-etl/air-carriers-international-market-etl/tests/pipelines/data_science/: test_pipeline.py
teste/: Aeroporto.csv  Class.csv  Companhia.csv  Distancia.csv  Fato.csv  Operadora.csv  Tempo.csv
